@@ -4,5 +4,5 @@ Version: 2.4.2
 Binary: drlm
 Maintainer: Pau Roura (pau@brainupdaters.net)
 Architecture: all
-Build-Depends: debhelper (>> 5.0.0)
+Build-Depends: debhelper (>> 10.0.0)
 Files:
