@@ -1,63 +1,55 @@
 # instclient workflow
 
 case "$DISTRO" in
-    Debian)
-        case "$CLI_VERSION" in
-            [6*-9*]|10*|11*)
-                if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_DEBIAN"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
-                    LogPrint "Services have been started succesfully" 
-                else 
-                    Error "Problem starting services" 
-                fi
-                ;;
-            *)
-                Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
-                ;;
-        esac
-        ;;
+  Debian)
+    if eval "[ -z \"\$REAR_SERVICES_DEBIAN$CLI_VERSION\" ]"; then
+      Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
+    else
+      if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_DEBIAN"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
+        LogPrint "Services have been started succesfully" 
+      else 
+        Error "Problem starting services" 
+      fi
+    fi
+    ;;
 
-    Ubuntu)
-        case "$CLI_VERSION" in
-            1[2-8]|20)
-                if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_UBUNTU"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
-                    LogPrint "Services have been started succesfully" 
-                else 
-                    Error "Problem starting services" 
-                fi
-                ;;
-            *)
-                Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
-                ;;
-        esac
-        ;;
+  Ubuntu)
+    if eval "[ -z \"\$REAR_SERVICES_UBUNTU$CLI_VERSION\" ]"; then
+      Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
+    else
+      if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_UBUNTU"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
+        LogPrint "Services have been started succesfully" 
+      else 
+        Error "Problem starting services" 
+      fi
+    fi
+    ;;
 
-    CentOS|RedHat|Rocky)
-        case "$CLI_VERSION" in
-            [5*-8*])
-                if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_REDHAT"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
-                    LogPrint "Services have been started succesfully" 
-                else 
-                    Error "Problem starting services" 
-                fi
-                ;;
-            *)
-                Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
-                ;;
-        esac
-        ;;
+  CentOS|RedHat|Rocky)
+    if eval "[ -z \"\$REAR_SERVICES_REDHAT$CLI_VERSION\" ]"; then
+      Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
+    else
+      if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_REDHAT"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
+        LogPrint "Services have been started succesfully" 
+      else 
+        Error "Problem starting services" 
+      fi
+    fi
+    ;;
 
-    Suse)
-        case "$CLI_VERSION" in
-            1[1-2-3-5]|42)
-                if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_SUSE"$CLI_VERSION")" "$DISTRO" "$SUDO"; then LogPrint "Services have been started succesfully"; else Error "Problem starting services"; fi
-                ;;
-            *)
-                Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
-                ;;
-        esac
-        ;;
+  Suse)
+    if eval "[ -z \"\$REAR_SERVICES_SUSE$CLI_VERSION\" ]"; then
+      Error "$DISTRO - $CLI_VERSION release not identified or unsupported!"
+    else
+      if ssh_start_services "$USER" "$CLI_NAME" "$(eval echo \$REAR_SERVICES_SUSE"$CLI_VERSION")" "$DISTRO" "$SUDO"; then 
+        LogPrint "Services have been started succesfully"
+      else 
+        Error "Problem starting services"
+      fi
+    fi
+    ;;
 
-    *)
-        Error "$DISTRO - $CLI_VERSION is a GNU/Linux Distribution not identified or unsupported by DRLM"
-        ;;
+  *)
+    Error "$DISTRO - $CLI_VERSION is a GNU/Linux Distribution not identified or unsupported by DRLM"
+    ;;
 esac
