@@ -424,6 +424,7 @@ URL_REAR_UBUNTU17_64="$URL_REAR_BASE/Rear/xUbuntu_17.04/amd64/rear_2.6-0_amd64.d
 URL_REAR_UBUNTU18_64="$URL_REAR_BASE/Rear/xUbuntu_18.04/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_UBUNTU19_64="$URL_REAR_BASE/Rear/xUbuntu_19.04/amd64/rear_2.6-0_amd64.deb"
 URL_REAR_UBUNTU20_64="$URL_REAR_BASE/Rear/xUbuntu_20.04/amd64/rear_2.6-0_amd64.deb"
+URL_REAR_UBUNTU22_64="$URL_REAR_BASE/Rear/xUbuntu_20.04/amd64/rear_2.6-0_amd64.deb"
 
 # CENTOS/REDHAT/ROCKY Packages
 #
@@ -464,6 +465,7 @@ REAR_DEP_UBUNTU17="binutils attr nfs-common"
 REAR_DEP_UBUNTU18="binutils attr nfs-common rsync genisoimage isolinux psmisc"
 REAR_DEP_UBUNTU19="binutils attr nfs-common"
 REAR_DEP_UBUNTU20="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc"
+REAR_DEP_UBUNTU22="binutils attr nfs-common net-tools rsync genisoimage isolinux psmisc curl ethtool gawk libsigsegv2"
 
 # CENTOS/REDHAT Dependencies
 REAR_DEP_REDHAT5_32="mkisofs mingetty syslinux nfs-utils portmap wget curl parted"
@@ -500,6 +502,7 @@ REAR_SERVICES_UBUNTU14="rpcbind"
 REAR_SERVICES_UBUNTU16="rpcbind"
 REAR_SERVICES_UBUNTU18="rpcbind"
 REAR_SERVICES_UBUNTU20="rpcbind"
+REAR_SERVICES_UBUNTU22="rpcbind"
 
 # CENTOS/REDHAT/ROCKY Services
 REAR_SERVICES_REDHAT5="portmap nfs"
